--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@heroicons/react": "^2.0.0",
     "@tailwindcss/forms": "^0.5.10",
     "autoprefixer": "^10.4.21",
+    "leaflet": "^1.9.4",
     "next": "15.2.1",
     "next-auth": "^4.24.11",
     "postcss": "^8.5.3",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
+    "react-simple-maps": "^3.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
