--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4",
     "autoprefixer": "^10.4.21",
+    "framer-motion": "^12.23.12",
     "leaflet": "^1.9.4",
     "next": "15.2.1",
     "next-auth": "^4.24.11",
