--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.20",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "20.19.14",
+    "@types/react": "19.1.13",
     "@types/react-dom": "^19",
-    "typescript": "^5"
+    "typescript": "5.9.2"
   }
 }
